# telegram_bot_demo

./: .gitignore  currency_rates.json  main.py  pyproject.toml  requirements.txt
